--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Giosg Header</title>
+  <title>Giosg App</title>
 
   <!-- Third party dependencies. -->
   <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.css">
