--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -211,16 +211,16 @@
       <div class="dates-field">
         <div class="start-date">
           <p class="start-date-text">Start Date</p>
-          <input class="startdate-inputbox" type="text" value="{{ start_date }}"></input>
+          <input class="startdate-inputbox" type="text" value="{{ start_date }}" />
         </div>
         <div class="end-date">
           <p class="end-date-text">End Date</p>
-          <input class="endate-inputbox" type="text" value="{{ end_date }}"></input>
+          <input class="endate-inputbox" type="text" value="{{ end_date }}" />
         </div>
 
         <div class="access-token">
           <p class="access-token-text">Access Token</p>
-          <input class="accesstoken-inputbox" type="text" value="{{ access_token }}"></input>
+          <input class="accesstoken-inputbox" type="text" value="{{ access_token }}" />
         </div>
 
       </div>
